--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,6 +1,14 @@
-sonar.organization=<replace with your SonarQube Cloud organization key>
-sonar.projectKey=<replace with the key generated when setting up the project on SonarQube Cloud>
+sonar.projectKey=zametrics_sopra-fs25-group-09-client
+sonar.organization=zametrics
 
-# relative paths to source directories. More details and properties are described
-# at https://docs.sonarsource.com/sonarqube-cloud/advanced-setup/analysis-scope/
-sonar.sources=./src
+
+# This is the name and version displayed in the SonarCloud UI.
+#sonar.projectName=sopra-fs25-group-09-client
+#sonar.projectVersion=1.0
+
+
+# Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
+#sonar.sources=.
+
+# Encoding of the source code. Default is default system encoding
+#sonar.sourceEncoding=UTF-8
