--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "next": "15.1.7",
     "node-localstorage": "^3.0.5",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
