--- a/package.json
+++ b/package.json
@@ -14,18 +14,21 @@
     "@ant-design/v5-patch-for-react-19": "^1.0.3",
     "antd": "^5.24.2",
     "dayjs": "^1.11.13",
+    "express": "^5.1.0",
     "moment": "^2.30.1",
     "next": "15.1.7",
     "node-localstorage": "^3.0.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "socket.io": "^4.8.1",
     "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
-    "@types/node": "^22.13.4",
+    "@types/node": "^22.14.0",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/socket.io": "^3.0.1",
     "eslint": "^9",
     "eslint-config-next": "15.1.7",
     "typescript": "^5"
