--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express": "^5.1.0",
     "moment": "^2.30.1",
     "next": "15.1.7",
+    "node-fetch": "^3.3.2",
     "node-localstorage": "^3.0.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
