--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "dayjs": "^1.11.13",
     "express": "^5.1.0",
     "moment": "^2.30.1",
-    "next": "15.1.7",
+    "next": "^15.2.4",
     "node-fetch": "^3.3.2",
     "node-localstorage": "^3.0.5",
     "react": "^19.0.0",
