--- a/socket-server/package.json
+++ b/socket-server/package.json
@@ -3,12 +3,11 @@
     "version": "1.0.0",
     "main": "index.js",
     "scripts": {
-        "start": "node index.js"
+      "start": "node index.js"
     },
     "dependencies": {
-        "cors": "^2.8.5",
-        "express": "^4.17.1",
-        "socket.io": "^4.5.0",
-        "socket.io-client": "^4.8.1"
+      "express": "^4.17.1",
+      "socket.io": "^4.5.0",
+      "cors": "^2.8.5"
     }
-}
+  }
