--- a/socket-server/package.json
+++ b/socket-server/package.json
@@ -3,11 +3,13 @@
     "version": "1.0.0",
     "main": "index.js",
     "scripts": {
-      "start": "node index.js"
+        "start": "node index.js"
     },
     "dependencies": {
-      "express": "^4.17.1",
-      "socket.io": "^4.5.0",
-      "cors": "^2.8.5"
+        "axios": "^1.8.4",
+        "cors": "^2.8.5",
+        "express": "^4.17.1",
+        "node-fetch": "^3.3.2",
+        "socket.io": "^4.5.0"
     }
-  }
+}
