--- a/socket-server/package.json
+++ b/socket-server/package.json
@@ -8,6 +8,7 @@
     "dependencies": {
         "axios": "^1.8.4",
         "cors": "^2.8.5",
+        "dotenv": "^16.5.0",
         "express": "^4.17.1",
         "node-fetch": "^3.3.2",
         "socket.io": "^4.5.0"
