functionally distinguish the painter. #82 Implement word selection modal for painter with dynamic word options Enhance socket events for real-time word and round synchronization Add painter selection logic with API-driven lobby state updates Improve lobby joining with automatic painter assignment for owners Add dynamic word fetching for painter based on lobby settings Sync game state with real-time player and round updates Optimize painter status tracking with useEffect and token comparison

--- a/socket-server/process.env
+++ b/socket-server/process.env
@@ -3,4 +3,4 @@
 # Use http://localhost:8080 if backend runs locally during development
 # Use the actual deployed backend URL in production
 
-BACKEND_API_URL=http://localhost:8080
+BACKEND_API_URL=https://sopra-fs25-group-09-server.oa.r.appspot.com/
